<resources>
    <string name="app_name">Edit</string>
    <string name="action_open">open</string>
    <string name="action_settings">setting</string>
    <string name="action_gotoline">gotoline</string>
    <string name="action_select_all">selectAll</string> 
    <string name="action_copy">copy</string>
    <string name="action_cut">cut</string>
    <string name="action_paste">paste</string>
    <string name="action_replaceFirst">replaceFirst</string>
    <string name="action_replaceAll">replaceAll</string>
    <string name="action_find_prev">prev</string>
    <string name="action_find_next">next</string>
</resources>
