<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:title="undo"
        android:icon="@drawable/ic_undo_selector"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_redo"
        android:orderInCategory="200"
        android:title="redo"
        android:icon="@drawable/ic_redo_selector"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="300"
        android:title="@string/action_copy"
        android:icon="@drawable/ic_copy_selector"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cut"
        android:orderInCategory="400"
        android:title="@string/action_cut"
        android:icon="@drawable/ic_cut_selector"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_paste"
        android:orderInCategory="500"
        android:title="@string/action_paste"
        android:icon="@drawable/ic_paste_selector"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="600"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_select_all_selector"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_open"
        android:orderInCategory="700"
        android:title="@string/action_open"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_gotoline"
        android:orderInCategory="800"
        android:title="@string/action_gotoline"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="900"
        android:title="@string/action_settings"
        android:showAsAction="never" />
    
</menu>

